--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^1.0.7
   http: ^0.13.6
   path: ^1.8.3
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
