--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   path: ^1.8.3
   http_parser: ^4.0.2
   fl_chart: ^0.66.0
+  audioplayers: ^5.2.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
